# rf-detr-training-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/agents/: AGENTS.md
.github/workflows/: ci-pkg.yml  ci-tests.yml  ci.yml  pre-commit-autoupdate.yml  pre-commit.yml
config/: README.md  weapon_detection.yaml
examples/: README.md  cctv-weapon-train-rf-detr-detection.ipynb
scripts/: README.md
src/rf_detr_finetuning/: __init__.py  __main__.py  cli.py  data.py  finetune.py  predict.py
src/rf_detr_finetuning/data/: __init__.py
src/rf_detr_finetuning/evaluation/: __init__.py
src/rf_detr_finetuning/training/: __init__.py
src/rf_detr_finetuning/utils/: __init__.py
tests/: README.md  test_data.py
