[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "rf-detr-training-pipeline"
description = "A modular fine-tuning pipeline for RF-DETR (Real-time DEtection TRansformer) models"
readme = "README.md"
keywords = [ "deep-learning", "fine-tuning", "object-detection", "rf-detr", "training-pipeline", "transformer" ]
license = { text = "MIT" }
authors = [
  { name = "Borda", email = "6035284+Borda@users.noreply.github.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "rfdetr",
  "supervision",
]

optional-dependencies.cli = [
  "jsonargparse",
]
optional-dependencies.data = [
  "kagglehub",
]
optional-dependencies.dev = [
  "pre-commit",
  "pytest",
]
urls.Homepage = "https://github.com/Borda/rf-detr-training-pipeline"
urls.Issues = "https://github.com/Borda/rf-detr-training-pipeline/issues"
urls.Repository = "https://github.com/Borda/rf-detr-training-pipeline"

[tool.setuptools.dynamic]
version = { attr = "rf_detr_finetuning.__version__" }

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
target-version = "py310"

line-length = 120
lint.select = [
  "D",  # pydocstyle
  "E",  # pycodestyle errors (includes E501 for line length)
  "F",  # Pyflakes
  "I",  # isort
  "PT", # pytest
  "UP", # pyupgrade
  "W",  # pycodestyle warnings
]
lint.per-file-ignores."**/test_*.py" = [ "D" ] # Exclude pydocstyle for test files
lint.per-file-ignores."tests/**" = [ "D", "E731" ] # Exclude pydocstyle for tests
lint.pydocstyle.convention = "google"

[tool.codespell]
#skip = '*.py'
quiet-level = 3
#ignore-words-list = """
#  typpo, \
#  baddtypo
#"""

[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 119
wrap-descriptions = 120
blank = true

[tool.pytest.ini_options]
color = "yes"
testpaths = [ "tests" ]
addopts = "-v --tb=short"
